Revert "Feature/jwt"
